--- a/css/style.css
+++ b/css/style.css
@@ -455,11 +455,20 @@ main .main-content .main-musics .musics .main-player .music-buttons .download {
 }
 main .main-content .main-musics .musics .main-player .music-text {
   margin-top: 10px;
-  width: 100%;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  overflow: scroll;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 20px;
 }
 main .main-content .main-musics .musics .main-player .music-text p {
   font-family: "Raleway";
@@ -468,9 +477,11 @@ main .main-content .main-musics .musics .main-player .music-text p {
   font-size: 14px;
   line-height: 16px;
   color: #323232;
-}
-main .main-content .main-musics .musics .main-player .music-text p a {
-  margin-top: 5px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: 150px;
+  overflow-x: scroll;
 }
 main .main-content .main-musics .musics h1 {
   font-family: "Raleway";
@@ -724,7 +735,7 @@ main .tabheader .tabheader-items .none {
 }
 
 footer {
-  margin-top: 250px;
+  margin-top: 240px;
   width: 80%;
   height: 100px;
   display: -webkit-box;
@@ -1131,7 +1142,8 @@ footer .footer-content .ad {
             justify-content: space-between;
   }
   main .main-content .main-musics .musics .main-player h3 {
-    display: none;
+    font-size: 16px;
+    margin: 0;
   }
   main .main-content .main-musics .musics .main-player .music-header {
     width: 100%;
@@ -1249,14 +1261,12 @@ footer .footer-content .ad {
     margin-right: 10px;
   }
   main .main-content .main-musics .musics .main-player .music-text {
-    display: block;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    height: 100px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1264,10 +1274,14 @@ footer .footer-content .ad {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    overflow-x: scroll;
   }
   main .main-content .main-musics .musics .main-player .music-text p {
     margin-top: 10px;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    height: 100px;
+    overflow-x: scroll;
   }
   main .main-content .main-musics .sections {
     width: 330px;
@@ -1336,7 +1350,7 @@ footer .footer-content .ad {
     display: none;
   }
   main .main-content .tabheader {
-    margin-top: 150px;
+    margin-top: 100px;
     width: 100%;
     height: 40px;
     display: -webkit-box;
