--- a/scss/style.scss
+++ b/scss/style.scss
@@ -285,9 +285,11 @@ main{
                     }
                     .music-text{
                         margin-top: 10px;
-                        width: 100%;
-                        height:max-content;
-                        overflow: scroll;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        flex-direction: column;
+                        padding: 20px;
                         p{
                             font-family: 'Raleway';
                             font-style: normal;
@@ -295,10 +297,11 @@ main{
                             font-size: 14px;
                             line-height: 16px;
                             color: #323232;
-                            a{
-                                margin-top: 5px;
-                            }
-                        }
+
+                            width: max-content;
+                            height:150px;
+                            overflow-x: scroll;
+                    }
                     }
 
                 }
@@ -491,13 +494,14 @@ main{
         }
 }
 footer{
-    margin-top: 250px;
+    margin-top: 240px;
     width: 80%;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-bottom: 20px;
+    
     .footer-content{
         width: 100%;
         height: 100%;
@@ -775,7 +779,8 @@ main{
                     flex-direction: column;
                     justify-content: space-between;
                     h3{
-                    display: none;
+                        font-size: 16px;
+                        margin: 0;
                     }
                     .music-header{
                         width: 100%;
@@ -856,15 +861,15 @@ main{
                         }
                     }
                     .music-text{
-                        display: block;
                         display: flex;
-                        width: max-content;
-                        height: 100px;
+                        justify-content: center;
                         align-items: center;
                         flex-direction: column;
-                        overflow-x: scroll;
                         p{
                             margin-top: 10px;
+                            width: max-content;
+                            height: 100px;
+                            overflow-x: scroll;
                         }
                     }
 
@@ -919,7 +924,7 @@ main{
                 
             }
         .tabheader{
-                margin-top: 150px;
+                margin-top: 100px;
                 width: 100%;
                 height: 40px;
                 display: flex;
