--- a/css/style.css
+++ b/css/style.css
@@ -469,17 +469,22 @@ main .main-content .main-musics .musics .main-player .music-text {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 20px;
+  width: 90%;
 }
 main .main-content .main-musics .musics .main-player .music-text p {
+  width: 100%;
   font-family: "Raleway";
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
   line-height: 16px;
   color: #323232;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 150px;
   overflow-x: scroll;
 }
@@ -1274,12 +1279,11 @@ footer .footer-content .ad {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    width: 90%;
   }
   main .main-content .main-musics .musics .main-player .music-text p {
     margin-top: 10px;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
+    width: 100%;
     height: 100px;
     overflow-x: scroll;
   }
