--- a/scss/style.scss
+++ b/scss/style.scss
@@ -289,8 +289,9 @@ main{
                         justify-content: center;
                         align-items: center;
                         flex-direction: column;
-                        padding: 20px;
+                        padding: 20px;width: 90%;
                         p{
+                            width: 100%;
                             font-family: 'Raleway';
                             font-style: normal;
                             font-weight: 300;
@@ -298,7 +299,8 @@ main{
                             line-height: 16px;
                             color: #323232;
 
-                            width: max-content;
+                            display: flex;
+                            justify-content: center;
                             height:150px;
                             overflow-x: scroll;
                     }
@@ -865,9 +867,10 @@ main{
                         justify-content: center;
                         align-items: center;
                         flex-direction: column;
+                        width: 90%;
                         p{
                             margin-top: 10px;
-                            width: max-content;
+                            width: 100%;
                             height: 100px;
                             overflow-x: scroll;
                         }
